# RegressionGuard

./: .env.example  .gitignore  main.py  pyproject.toml
core/personas/: archetypes.py  schema.py
tests/: test_structure.py
